ceammc/ext/src/lib/lex/parser_array_saver.cpp

#line 1 "lex/parser_array_saver.rl"
# include "parser_array_saver.h"
# include "parser_numeric.h"
# include "ragel_common.h"
# include "ceammc_convert.h"

# include <algorithm>
# include <cmath>
# include <cstdint>
# include <string>

namespace {

using namespace ceammc::parser;

struct NumCleaner {
    fsm::NumericData& num_;
    ~NumCleaner() { num_ = {}; }
};

template<typename T>
inline T getValue(fsm::NumericData& num, AtomType type)
{
    NumCleaner cleaner { num };
    return (type != TYPE_FLOAT) ? num.getInteger() : num.getFloat();
}

inline size_t clipArraySize(std::int64_t v, size_t arraySize)
{
    return std::min<std::int64_t>(arraySize, std::max<std::int64_t>(0, v));
}

inline std::int64_t getUnitValue(ArraySaverParams& params, fsm::NumericData& num, AtomType type, size_t arraySize)
{
    switch (type) {
    case TYPE_PERCENT:
        return std::round(num.getFloat() * arraySize * 0.01);
    case TYPE_PHASE:
        return std::round(num.getFloat() * arraySize);
    case TYPE_FLOAT:
    case TYPE_INT:
    case TYPE_SAMP:
        return std::round(num.getFloat());
    case TYPE_MSEC:
        return std::round(num.getFloat() * 0.001 * params.in_sr);
    case TYPE_SEC:
        return std::round(num.getFloat() * params.in_sr);
    default:
        return 0;
    }
}

inline size_t getArrayAbsPos(ArraySaverParams& params, std::int64_t pos, std::int64_t arraySize)
{
    return (params.origin == ORIGIN_BEGIN) ? pos : (arraySize + pos);
}

inline size_t getArrayPos(ArraySaverParams& params, fsm::NumericData& num, AtomType type, size_t arraySize)
{
    NumCleaner cleaner { num };

    auto pos = getUnitValue(params, num, type, arraySize);
    return clipArraySize(getArrayAbsPos(params, pos, arraySize), arraySize);
}
}


#line 70 "lex/parser_array_saver.cpp"
static const int array_saver_start = 1;
static const int array_saver_first_final = 105;
static const int array_saver_error = 0;

static const int array_saver_en_main = 1;


#line 135 "lex/parser_array_saver.rl"


namespace ceammc {
namespace parser {

static sound::SoundFileFormat detect_format(const char* str, size_t len);

bool parse_array_saver_params(const char* str, size_t arraySize, ArraySaverParams& params)
{
    auto len = strlen(str);
    int cs = 0;
    const char* p = str;
    const char* pe = p + len;
    const char* eof = p + len;

    params.format = sound::FORMAT_UNKNOWN;
    params.sample_format = sound::SAMPLE_DEFAULT;

    std::string ragel_atom;
    double val = 0;

    DECLARE_RAGEL_COMMON_VARS;
    DECLARE_RAGEL_NUMERIC_VARS;


#line 104 "lex/parser_array_saver.cpp"
	{
	cs = array_saver_start;
	}

#line 109 "lex/parser_array_saver.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 32: goto st0;
		case 64: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st0;
	goto tr0;
tr0:
#line 129 "lex/parser_array_saver.rl"
	{ ragel_atom.clear(); }
#line 75 "lex/parser_array_saver.rl"
	{ ragel_atom += (*p); }
	goto st105;
tr133:
#line 75 "lex/parser_array_saver.rl"
	{ ragel_atom += (*p); }
	goto st105;
st105:
	if ( ++p == pe )
		goto _test_eof105;
case 105:
#line 137 "lex/parser_array_saver.cpp"
	if ( (*p) == 32 )
		goto tr134;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr134;
	goto tr133;
tr134:
#line 129 "lex/parser_array_saver.rl"
	{ params.filename = ragel_atom; }
	goto st2;
tr135:
#line 120 "lex/parser_array_saver.rl"
	{ params.format = sound::FORMAT_AIFF; }
	goto st2;
tr136:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 71 "lex/parser_array_saver.rl"
	{ ragel_num.vdouble = ragel_num.vint; }
#line 110 "lex/parser_array_saver.rl"
	{ params.begin = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr144:
#line 26 "lex/ragel_units.rl"
	{ragel_type = TYPE_PERCENT;}
#line 110 "lex/parser_array_saver.rl"
	{ params.begin = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr145:
#line 29 "lex/ragel_units.rl"
	{ragel_type = TYPE_PHASE;}
#line 110 "lex/parser_array_saver.rl"
	{ params.begin = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr146:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
#line 110 "lex/parser_array_saver.rl"
	{ params.begin = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr153:
#line 110 "lex/parser_array_saver.rl"
	{ params.begin = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr157:
#line 19 "lex/ragel_units.rl"
	{ragel_type = TYPE_MSEC;}
#line 110 "lex/parser_array_saver.rl"
	{ params.begin = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr160:
#line 22 "lex/ragel_units.rl"
	{ragel_type = TYPE_SEC;}
#line 110 "lex/parser_array_saver.rl"
	{ params.begin = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr163:
#line 21 "lex/ragel_units.rl"
	{ragel_type = TYPE_SAMP;}
#line 110 "lex/parser_array_saver.rl"
	{ params.begin = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr165:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 71 "lex/parser_array_saver.rl"
	{ ragel_num.vdouble = ragel_num.vint; }
#line 111 "lex/parser_array_saver.rl"
	{ params.end = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr173:
#line 26 "lex/ragel_units.rl"
	{ragel_type = TYPE_PERCENT;}
#line 111 "lex/parser_array_saver.rl"
	{ params.end = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr174:
#line 29 "lex/ragel_units.rl"
	{ragel_type = TYPE_PHASE;}
#line 111 "lex/parser_array_saver.rl"
	{ params.end = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr175:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
#line 111 "lex/parser_array_saver.rl"
	{ params.end = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr182:
#line 111 "lex/parser_array_saver.rl"
	{ params.end = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr186:
#line 19 "lex/ragel_units.rl"
	{ragel_type = TYPE_MSEC;}
#line 111 "lex/parser_array_saver.rl"
	{ params.end = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr189:
#line 22 "lex/ragel_units.rl"
	{ragel_type = TYPE_SEC;}
#line 111 "lex/parser_array_saver.rl"
	{ params.end = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr192:
#line 21 "lex/ragel_units.rl"
	{ragel_type = TYPE_SAMP;}
#line 111 "lex/parser_array_saver.rl"
	{ params.end = getArrayPos(params, ragel_num, ragel_type, arraySize); }
	goto st2;
tr194:
#line 123 "lex/parser_array_saver.rl"
	{ params.format = sound::FORMAT_FLAC; }
	goto st2;
tr195:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 79 "lex/parser_array_saver.rl"
	{ params.gain = getValue<float>(ragel_num, ragel_type); }
	goto st2;
tr199:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
#line 79 "lex/parser_array_saver.rl"
	{ params.gain = getValue<float>(ragel_num, ragel_type); }
	goto st2;
tr203:
#line 14 "lex/ragel_units.rl"
	{ragel_type = TYPE_DB;}
#line 81 "lex/parser_array_saver.rl"
	{ params.gain = convert::dbfs2amp(params.gain); }
	goto st2;
tr205:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 113 "lex/parser_array_saver.rl"
	{ params.in_sr  = getValue<float>(ragel_num, ragel_type); }
	goto st2;
tr207:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
#line 113 "lex/parser_array_saver.rl"
	{ params.in_sr  = getValue<float>(ragel_num, ragel_type); }
	goto st2;
tr208:
#line 117 "lex/parser_array_saver.rl"
	{ params.format = sound::FORMAT_MP3; }
	goto st2;
tr209:
#line 115 "lex/parser_array_saver.rl"
	{ params.normalize = true; }
	goto st2;
tr210:
#line 118 "lex/parser_array_saver.rl"
	{ params.format = sound::FORMAT_OGG; }
	goto st2;
tr211:
#line 119 "lex/parser_array_saver.rl"
	{ params.format = sound::FORMAT_OPUS; }
	goto st2;
tr212:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 114 "lex/parser_array_saver.rl"
	{ params.out_sr = getValue<float>(ragel_num, ragel_type); }
	goto st2;
tr214:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
#line 114 "lex/parser_array_saver.rl"
	{ params.out_sr = getValue<float>(ragel_num, ragel_type); }
	goto st2;
tr215:
#line 124 "lex/parser_array_saver.rl"
	{ params.overwrite = true; }
	goto st2;
tr216:
#line 122 "lex/parser_array_saver.rl"
	{ params.format = sound::FORMAT_RAW; }
	goto st2;
tr217:
#line 83 "lex/parser_array_saver.rl"
	{ params.sample_format = sound::SAMPLE_DEFAULT; }
	goto st2;
tr218:
#line 85 "lex/parser_array_saver.rl"
	{ params.sample_format = sound::SAMPLE_PCM_16; }
	goto st2;
tr219:
#line 86 "lex/parser_array_saver.rl"
	{ params.sample_format = sound::SAMPLE_PCM_24; }
	goto st2;
tr220:
#line 87 "lex/parser_array_saver.rl"
	{ params.sample_format = sound::SAMPLE_PCM_32; }
	goto st2;
tr221:
#line 84 "lex/parser_array_saver.rl"
	{ params.sample_format = sound::SAMPLE_PCM_8; }
	goto st2;
tr222:
#line 88 "lex/parser_array_saver.rl"
	{ params.sample_format = sound::SAMPLE_PCM_FLOAT; }
	goto st2;
tr223:
#line 121 "lex/parser_array_saver.rl"
	{ params.format = sound::FORMAT_TEXT; }
	goto st2;
tr224:
#line 116 "lex/parser_array_saver.rl"
	{ params.format = sound::FORMAT_WAV; }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 398 "lex/parser_array_saver.cpp"
	switch( (*p) ) {
		case 32: goto st2;
		case 64: goto tr3;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st2;
	goto st0;
st0:
cs = 0;
	goto _out;
tr3:
#line 93 "lex/parser_array_saver.rl"
	{ params.origin = ORIGIN_BEGIN; }
#line 94 "lex/parser_array_saver.rl"
	{ params.origin = ORIGIN_BEGIN; }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 419 "lex/parser_array_saver.cpp"
	switch( (*p) ) {
		case 97: goto st4;
		case 98: goto st7;
		case 101: goto st28;
		case 102: goto st47;
		case 103: goto st50;
		case 105: goto st59;
		case 109: goto st67;
		case 110: goto st69;
		case 111: goto st72;
		case 114: goto st91;
		case 115: goto st93;
		case 116: goto st101;
		case 119: goto st103;
	}
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 105 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 102 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 102 )
		goto st106;
	goto st0;
st106:
	if ( ++p == pe )
		goto _test_eof106;
case 106:
	if ( (*p) == 32 )
		goto tr135;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr135;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 101 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 103 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 105 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 110 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 32 )
		goto st12;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 32: goto st12;
		case 36: goto tr25;
		case 43: goto tr26;
		case 45: goto tr26;
		case 48: goto tr27;
	}
	if ( (*p) > 13 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr28;
	} else if ( (*p) >= 9 )
		goto st12;
	goto st0;
tr25:
#line 73 "lex/parser_array_saver.rl"
	{ params.origin = ORIGIN_END; }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 528 "lex/parser_array_saver.cpp"
	switch( (*p) ) {
		case 43: goto tr26;
		case 45: goto tr26;
		case 48: goto tr27;
	}
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr28;
	goto st0;
tr26:
#line 21 "lex/ragel_numeric.rl"
	{ ragel_num.sign = ((*p)=='-') ? -1 : 1; }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 545 "lex/parser_array_saver.cpp"
	if ( (*p) == 48 )
		goto tr27;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr28;
	goto st0;
tr27:
#line 29 "lex/ragel_numeric.rl"
	{ (ragel_num.vint *= 10) += ((*p)-'0'); }
	goto st107;
st107:
	if ( ++p == pe )
		goto _test_eof107;
case 107:
#line 559 "lex/parser_array_saver.cpp"
	switch( (*p) ) {
		case 32: goto tr136;
		case 37: goto tr137;
		case 42: goto tr138;
		case 46: goto tr139;
		case 95: goto tr140;
		case 109: goto tr141;
		case 112: goto tr142;
		case 115: goto tr143;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr136;
	goto st0;
tr137:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 71 "lex/parser_array_saver.rl"
	{ ragel_num.vdouble = ragel_num.vint; }
	goto st108;
tr147:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
	goto st108;
st108:
	if ( ++p == pe )
		goto _test_eof108;
case 108:
#line 596 "lex/parser_array_saver.cpp"
	if ( (*p) == 32 )
		goto tr144;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr144;
	goto st0;
tr138:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 71 "lex/parser_array_saver.rl"
	{ ragel_num.vdouble = ragel_num.vint; }
	goto st109;
tr148:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
	goto st109;
st109:
	if ( ++p == pe )
		goto _test_eof109;
case 109:
#line 625 "lex/parser_array_saver.cpp"
	if ( (*p) == 32 )
		goto tr145;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr145;
	goto st0;
tr139:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 50 "lex/ragel_numeric.rl"
	{
        ragel_num.ratio.num = 0;
        ragel_num.ratio.den = 1;
    }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 648 "lex/parser_array_saver.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr29;
	goto st0;
tr29:
#line 54 "lex/ragel_numeric.rl"
	{
        (ragel_num.ratio.num *= 10) += ((*p) - '0');
        ragel_num.ratio.den *= 10;
    }
	goto st110;
st110:
	if ( ++p == pe )
		goto _test_eof110;
case 110:
#line 663 "lex/parser_array_saver.cpp"
	switch( (*p) ) {
		case 32: goto tr146;
		case 37: goto tr147;
		case 42: goto tr148;
		case 95: goto tr149;
		case 109: goto tr150;
		case 112: goto tr151;
		case 115: goto tr152;
	}
	if ( (*p) > 13 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr29;
	} else if ( (*p) >= 9 )
		goto tr146;
	goto st0;
tr140:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 71 "lex/parser_array_saver.rl"
	{ ragel_num.vdouble = ragel_num.vint; }
	goto st111;
tr149:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
	goto st111;
st111:
	if ( ++p == pe )
		goto _test_eof111;
case 111:
#line 702 "lex/parser_array_saver.cpp"
	switch( (*p) ) {
		case 32: goto tr153;
		case 37: goto st108;
		case 42: goto st109;
		case 109: goto st16;
		case 112: goto st18;
		case 115: goto st115;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr153;
	goto st0;
tr141:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 71 "lex/parser_array_saver.rl"
	{ ragel_num.vdouble = ragel_num.vint; }
	goto st16;
tr150:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 737 "lex/parser_array_saver.cpp"
	if ( (*p) == 115 )
		goto st112;
	goto st0;
st112:
	if ( ++p == pe )
		goto _test_eof112;
case 112:
	switch( (*p) ) {
		case 32: goto tr157;
		case 101: goto st17;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr157;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) == 99 )
		goto st113;
	goto st0;
st113:
	if ( ++p == pe )
		goto _test_eof113;
case 113:
	if ( (*p) == 32 )
		goto tr157;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr157;
	goto st0;
tr142:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 71 "lex/parser_array_saver.rl"
	{ ragel_num.vdouble = ragel_num.vint; }
	goto st18;
tr151:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
        ragel_cat  = CAT_NUMBER;
    }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 791 "lex/parser_array_saver.cpp"
	switch( (*p) ) {
		case 101: goto st19;
		case 104: goto st23;
	}
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 114 )
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) == 99 )
		goto st114;
	goto st0;
st114:
	if ( ++p == pe )
		goto _test_eof114;
case 114:
	switch( (*p) ) {
		case 32: goto tr144;
		case 101: goto st21;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr144;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 110 )
		goto st22;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( (*p) == 116 )
		goto st108;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 97 )
		goto st24;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 115 )
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 101 )
		goto st109;
	goto st0;
tr143:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 71 "lex/parser_array_saver.rl"
	{ ragel_num.vdouble = ragel_num.vint; }
	goto st115;
tr152:
#line 58 "lex/ragel_numeric.rl"
	{
        const auto frac = double(ragel_num.ratio.num) / ragel_num.ratio.den;
        ragel_num.vdouble = ragel_num.vint + ragel_num.sign * frac;
        ragel_type = TYPE_FLOAT;
